cluster/apps/media/05-transmission-deployment.yaml
---
## transmission
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transmission
  labels:
    app.kubernetes.io/name: transmission
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: transmission
  template:
    metadata:
      labels:
        app.kubernetes.io/name: transmission
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9190"
    spec:
      serviceAccountName: media
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      securityContext:
        runAsGroup: 568
        runAsUser: 568
      containers:
      - name: transmission
        image: "ghcr.io/k8s-at-home/transmission:v3.00"
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 9091
          protocol: TCP
        - name: utptcp
          containerPort: 51413
          protocol: TCP
        - name: utpudp
          containerPort: 51413
          protocol: UDP
        volumeMounts:
        - mountPath: /config
          name: media
          subPath: config/transmission
        - mountPath: /downloads
          name: media
          subPath: downloads/transmission
        resources:
          requests:
            cpu: 80m
            memory: 64Mi
      - image: szpaczyn/transmission_exporter-arm64:v0.3.0
        name: exporter
        imagePullPolicy: IfNotPresent
        ports:
        - name: exporter
          containerPort: 9190
        resources:
          limits:
            cpu: 100m
            memory: 100Mi
          requests:
            cpu: 50m
            memory: 50Mi
      volumes:
      - name: media
        persistentVolumeClaim:
          claimName: media
      nodeSelector:
        kubernetes.io/role: worker
