cluster/apps/media/calibre-deployment.yaml
---
## calibre-web
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calibre-web
  labels:
    app.kubernetes.io/name: calibre-web
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: calibre-web
  template:
    metadata:
      labels:
        app.kubernetes.io/name: calibre-web
    spec:
      serviceAccountName: media
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      securityContext: {}
        #runAsGroup: 1001
        #runAsUser: 1001
      containers:
        - name: calibre-web
          #image: "szpaczyn/calibre-web-arm64:v0.6.12"
          image: "linuxserver/calibre-web:0.6.18"
          imagePullPolicy: IfNotPresent
          ports:
            - name: calibre-web
              containerPort: 8083
              protocol: TCP
          volumeMounts:
            - mountPath: /config
              name: media
              subPath: library/books
            - mountPath: /books
              name: media
              subPath: library/books
          resources:
            requests:
              cpu: 0.1
              memory: 100Mi
            limits:
              cpu: 0.3
              memory: 256Mi
      volumes:
      - name: media
        persistentVolumeClaim:
          claimName: media
      nodeSelector:
        kubernetes.io/role: worker
