cluster/apps/media/jackett-deployment.yaml
---
## jackett
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jackett
  labels:
    app.kubernetes.io/name: jackett
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: jackett
  template:
    metadata:
      labels:
        app.kubernetes.io/name: jackett
    spec:
      serviceAccountName: media
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      securityContext: {}
        #  runAsGroup: 568
        #  runAsUser: 568
      containers:
      - name: jackett
        image: "linuxserver/jackett:0.21.1043"
        imagePullPolicy: IfNotPresent
        ports:
        - name: jackett
          containerPort: 9117
          protocol: TCP
        volumeMounts:
          - mountPath: /downloads
            name: media
            subPath: downloads/jackett
          - mountPath: /config
            name: media
            subPath: config/jackett
        resources:
          requests:
            cpu: 0.02
            memory: 100Mi
          limits:
            cpu: 0.1
            memory: 200Mi
      volumes:
      - name: media
        persistentVolumeClaim:
          claimName: media
      nodeSelector:
        kubernetes.io/role: worker
