cluster/apps/media/prowlarr-deployment.yaml
---
## prowlarr
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
  labels:
    app.kubernetes.io/name: prowlarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: prowlarr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: prowlarr
    spec:
      serviceAccountName: media
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      securityContext:
        runAsGroup: 568
        runAsUser: 568
      containers:
      - name: prowlarr
        image: "ghcr.io/onedr0p/prowlarr:1.18"
        imagePullPolicy: IfNotPresent
        ports:
          - name: prowlarr
            containerPort: 9696
            protocol: TCP
        volumeMounts:
          - mountPath: /config
            name: media
            subPath: config/prowlarr
          - mountPath: /downloads
            name: media
            subPath: downloads/transmission
        resources:
          limits:
            cpu: 0.5
            memory: 400Mi
          requests:
            cpu: 0.1
            memory: 200Mi
      volumes:
      - name: media
        persistentVolumeClaim:
          claimName: media
      nodeSelector:
        kubernetes.io/role: worker
