cluster/apps/media/radarr-deployment.yaml
---
## radarr
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  labels:
    app.kubernetes.io/name: radarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: radarr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: radarr
      annotations:
        prometheus.io/port: "9707"
        prometheus.io/scrape: "true"
    spec:
      serviceAccountName: media
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      securityContext: {}
        #  runAsGroup: 568
        #  runAsUser: 568
      containers:
      - name: exporter
        image: ghcr.io/onedr0p/exportarr:v1.0.0
        imagePullPolicy: IfNotPresent
        args:
          - radarr
        ports:
          - name: monitoring
            containerPort: 9707
      - name: radarr
        image: "ghcr.io/k8s-at-home/radarr:v4.1.0.6175"
          #image: "ghcr.io/k8s-at-home/radarr:v4.0.5.5981"
        imagePullPolicy: IfNotPresent
        ports:
          - name: radarr
            containerPort: 7878
            protocol: TCP
        volumeMounts:
          - mountPath: /config
            name: media
            subPath: config/radarr
          - mountPath: /downloads
            name: media
            subPath: downloads/transmission
          - mountPath: /movies
            name: media
            subPath: library/movies
        resources:
          limits:
            cpu: 0.3
            memory: 256Mi
          requests:
            cpu: 0.1
            memory: 128Mi
      volumes:
      - name: media
        persistentVolumeClaim:
          claimName: media
      nodeSelector:
        kubernetes.io/role: worker
