cluster/apps/media/sonarr-deployment.yaml
---
## sonarr
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  labels:
    app.kubernetes.io/name: sonarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: sonarr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: sonarr
      annotations:
        prometheus.io/port: "9707"
        prometheus.io/scrape: "true"
    spec:
      serviceAccountName: media
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      securityContext:
        runAsGroup: 568
        runAsUser: 568
      containers:
      - name: exporter
        image: "ghcr.io/onedr0p/exportarr:v2.0.0"
        imagePullPolicy: IfNotPresent
        args:
          - sonarr
        ports:
          - name: monitoring
            containerPort: 9707
        resources:
          limits:
            cpu: 0.1
            memory: 256Mi
          requests:
            cpu: 0.05
            memory: 50Mi
      - name: sonarr
        image: "ghcr.io/onedr0p/sonarr:3.0.10.1567"
          #        image: "ghcr.io/onedr0p/sonarr:3.0.9.1549"
        imagePullPolicy: IfNotPresent
        ports:
          - name: sonarr
            containerPort: 8989
            protocol: TCP
        volumeMounts:
          - mountPath: /config
            name: media
            subPath: config/sonarr
          - mountPath: /downloads
            name: media
            subPath: downloads/transmission
          - mountPath: /tv
            name: media
            subPath: library/tv
        resources:
          limits:
            cpu: 0.3
            memory: 500Mi
          requests:
            cpu: 0.1
            memory: 200Mi
      volumes:
      - name: media
        persistentVolumeClaim:
          claimName: media
      nodeSelector:
        kubernetes.io/role: worker
