cluster/apps/media/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: "media"
  name: "media"
  labels:
    app.kubernetes.io/name: media
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: media-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
      #    nginx.ingress.kubernetes.io/modsecurity-snippet: |
      #      SecRuleEngine On
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "media.shpaq.org"
      secretName: media-shpaq-org-tls
  rules:
  - host: "media.shpaq.org"
    http:
      paths:
        - path: "/transmission"
          pathType: Prefix
          backend:
            service:
              name: "transmission-http"
              port:
                number: 9091
        - path: "/sonarr"
          pathType: Prefix
          backend:
            service:
              name: "sonarr"
              port:
                number: 8989
#        - path: "/jackett"
#          pathType: Prefix
#          backend:
#            service:
#              name: "jackett"
#              port:
#                number: 9117
        - path: "/bazarr"
          pathType: Prefix
          backend:
            service:
              name: "bazarr"
              port:
                number: 6767
        - path: "/radarr"
          pathType: Prefix
          backend:
            service:
              name: "radarr"
              port:
                number: 7878
        - path: "/lidarr"
          pathType: Prefix
          backend:
            service:
              name: "lidarr"
              port:
                number: 8686
        - path: "/prowlarr"
          pathType: Prefix
          backend:
            service:
              name: "prowlarr"
              port:
                number: 9696
        - path: "/readarr"
          pathType: Prefix
          backend:
            service:
              name: "readarr"
              port:
                number: 8787
---
## calibre-web
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: media
  name: calibre-web
  labels:
    app.kubernetes.io/instance: calibre-web
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/modsecurity-snippet: |
      SecRuleEngine On
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "calibre.shpaq.org"
      secretName: calibre-shpaq-org-tls
  rules:
    - host: "calibre.shpaq.org"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: calibre-web
                port:
                  number: 8083
